--- a/goodbye.html
+++ b/goodbye.html
@@ -4,4 +4,8 @@
 <ul>
   <li>English: Goodbye, friends!</li>
   <li>Spanish: Adios, amigos!</li>
+  <li>Chinese: Zaijian!</li>
+  <li>English: Goodbye, friends!</li>
+  <li>Spanish: Adios, amigos!</li>
+  <li>Chinese: Zaijian!</li>
 </ul>
